Add org decrypt binding

--- a/init.org
+++ b/init.org
@@ -425,6 +425,8 @@ General keybindings
     "otu" 'org-timestamp-up-day
     "otd" 'org-timestamp-down-day
 
+    "od" 'org-decrypt-entry
+
     "tn" (list (lambda () (interactive) (find-file tech-notebook-file)) :which-key "tech-notebook")
 
     "m" '(:ignore t :which-key "todo")
@@ -466,6 +468,7 @@ General keybindings
     "cc" 'sl-store-link
     "cp" 'sl-insert-link))
 #+end_src
+
 ** Modeline
 Doom modeline - it looks nice!
 #+begin_src elisp
