Reorganize org section, add some bindings

--- a/init.org
+++ b/init.org
@@ -37,6 +37,24 @@
       - [[#visual-fill-eg-the-visual-wrap-of-the-lines][Visual fill, e.g. the visual wrap of the lines]]
       - [[#auto-fill-eg-adding-line-breaks-to-lines][Auto fill, e.g. adding line breaks to lines]]
     - [[#highlight-current-line][Highlight current line]]
+    - [[#no-scrollbar-toolbar-menubar-because-bloat-1][No scrollbar, toolbar, menubar, because bloat]]
+    - [[#line-numbers--relative-line-numbers-1][Line numbers + relative line numbers]]
+    - [[#display-battery-in-the-bar-1][Display battery in the bar]]
+    - [[#display-time-in-the-bar-1][Display time in the bar]]
+    - [[#use-spaces-instead-of-tabs-1][Use spaces instead of tabs]]
+    - [[#commenting-1][Commenting]]
+    - [[#command-log-mode-1][Command log mode]]
+    - [[#which-key-1][Which-key]]
+    - [[#undo-magic-1][Undo magic]]
+    - [[#buffer-display-1][Buffer display]]
+    - [[#delete-unnecessary-whitespace-1][Delete unnecessary whitespace]]
+    - [[#restart-emacs-from-within-emacs-1][Restart emacs from within emacs]]
+    - [[#better-yesno-prompts-1][Better yes/no prompts]]
+    - [[#show-the-column-number-1][Show the column number]]
+    - [[#auto-fill-and-visual-fill-1][Auto Fill and Visual fill]]
+      - [[#visual-fill-eg-the-visual-wrap-of-the-lines-1][Visual fill, e.g. the visual wrap of the lines]]
+      - [[#auto-fill-eg-adding-line-breaks-to-lines-1][Auto fill, e.g. adding line breaks to lines]]
+    - [[#highlight-current-line-1][Highlight current line]]
   - [[#keybindings][Keybindings]]
   - [[#modeline][Modeline]]
   - [[#dashboard][Dashboard]]
@@ -46,6 +64,10 @@
     - [[#evil-collection-mode][Evil collection mode]]
   - [[#org-mode][Org-mode]]
     - [[#general][General]]
+    - [[#capture-templates][Capture templates]]
+    - [[#agenda][Agenda]]
+    - [[#refiling][Refiling]]
+    - [[#clocking][Clocking]]
     - [[#org-roam][Org-roam]]
       - [[#deft-for-viewing-roam-files][Deft for viewing roam files]]
     - [[#ox-hugo][Ox-hugo]]
@@ -220,6 +242,124 @@ This is seriously retarded.
   :straight t
   :config
   (load-theme 'challenger-deep t))
+#+end_src
+
+#+RESULTS:
+: t
+
+*** No scrollbar, toolbar, menubar, because bloat
+#+begin_src elisp
+(scroll-bar-mode -1)
+(tool-bar-mode -1)
+(menu-bar-mode -1)
+#+end_src
+*** Line numbers + relative line numbers
+#+begin_src elisp
+(global-display-line-numbers-mode)
+(setq display-line-numbers-type 'relative)
+#+end_src
+*** Display battery in the bar
+#+begin_src elisp
+(display-battery-mode t)
+#+end_src
+*** Display time in the bar
+#+begin_src elisp
+(setq display-time-format "%H:%M %a,%d %b %Y")
+(setq display-time-default-load-average nil)
+(display-time)
+#+end_src
+*** Use spaces instead of tabs
+#+begin_src elisp
+(setq-default indent-tabs-mode nil)
+#+end_src
+*** Commenting
+#+begin_src elisp
+(use-package evil-nerd-commenter
+  :straight t
+  :config
+  (evilnc-default-hotkeys))
+#+end_src
+*** Command log mode
+Show command history in sidebar. Looks slick. Works good for demos and stuff.
+#+begin_src elisp
+(use-package command-log-mode
+  :straight t)
+#+end_src
+*** Which-key
+Showing a popup for key combinations that follow the pressed key (like in Spacemacs and Doom)
+#+begin_src elisp
+(use-package which-key
+  :straight t
+  :config
+  (which-key-mode))
+#+end_src
+*** Undo magic
+#+begin_src elisp
+(use-package undo-tree
+  :straight t
+  :init
+  (global-undo-tree-mode))
+#+end_src
+*** Buffer display
+When running ~display-buffer~, will show the ~*Emacs Log*~ buffer on the right side of the window
+Here for informational purposes.
+#+begin_src elisp
+;; (setq display-buffer-alist
+;;   `(;; Messages, errors, processes, Calendar in the bottom side window
+;;      (,(rx bos (or "*Emacs Log*"))  ; interaction log *Emacs Log*
+;;        (display-buffer-reuse-window display-buffer-in-side-window)
+;;        (side . right)
+;;        (reusable-frames . visible)
+;;        (window-height . 0.45))
+;;        ;; Let `display-buffer' reuse visible frames for all buffers. This must
+;;        ;; be the last entry in `display-buffer-alist', because it overrides any
+;;        ;; previous entry with more actions.
+;;      ("." nil (reusable-frames . visible))))
+#+end_src
+*** Delete unnecessary whitespace
+#+begin_src elisp
+(use-package simple
+  :hook (before-save . delete-trailing-whitespace))
+#+end_src
+*** Restart emacs from within emacs
+#+begin_src elisp
+(use-package restart-emacs
+  :straight t)
+#+end_src
+*** Better yes/no prompts
+Because writing yes is too much work.
+
+#+begin_src elisp
+(fset 'yes-or-no-p 'y-or-n-p)
+#+end_src
+*** Show the column number
+#+begin_src elisp
+(column-number-mode 1)
+#+end_src
+*** Auto Fill and Visual fill
+**** Visual fill, e.g. the visual wrap of the lines
+#+begin_src elisp
+(defun nimor/org-mode-visual-fill ()
+  (setq visual-fill-column-width 120
+        visual-fill-column-center-text t)
+  (visual-fill-column-mode 1))
+
+(use-package visual-fill-column
+  :straight t
+  :hook (org-mode . nimor/org-mode-visual-fill))
+#+end_src
+
+**** Auto fill, e.g. adding line breaks to lines
+#+begin_src elisp
+(use-package simple
+  :hook ((prog-mode . turn-on-auto-fill)
+         (text-mode . turn-on-auto-fill))
+  :config
+  (setq-default fill-column 112))
+#+end_src
+*** Highlight current line
+#+begin_src elisp
+(global-hl-line-mode)
 #+end_src
 *** No scrollbar, toolbar, menubar, because bloat
 #+begin_src elisp
@@ -410,20 +550,32 @@ General keybindings
 
     "fw"  (list (lambda () (interactive) (find-file work-file)) :which-key "work")
 
-    "o"   '(:ignore t :which-key "org")
-    "oc"  'org-capture
-    "oa"  'org-agenda
+    "o"    '(:ignore t :which-key "org")
+    "oa"   'org-agenda
     "opp"  'org-pomodoro
-    "or"  'org-refile
-    "os"  'org-archive-subtree
-    "ok"  '(:ignore t :which-key "kanban")
-    "oki" 'org-kanban/initialize-at-end
-    "oks" 'org-kanban/shift
-    "opt" 'org-projectile-project-todo-completing-read
+    "or"   'org-refile
+    "os"   'org-archive-subtree
+
+    "oc"   '(:ignore t :which-key "org-clock")
+    "occ"  'org-capture
+    "oci"  'org-clock-in
+    "oco"  'org-clock-out
+    "ocl"  'org-clock-in-last
+    "ocr"  'org-clock-report
+    "ocg"  'org-clock-goto
+
+    "ok"   '(:ignore t :which-key "kanban")
+    "oki"  'org-kanban/initialize-at-end
+    "oks"  'org-kanban/shift
+
+    "op"   '(:ignoer t :which-key "org-projectile")
+    "opt"  'org-projectile-project-todo-completing-read
+    "opg"  'org-projectile-goto-location-for-project
 
     "ot" '(:ignore t :which-key "timestamp")
     "otu" 'org-timestamp-up-day
     "otd" 'org-timestamp-down-day
+    "otl" 'org-toggle-link-display
 
     "od" 'org-decrypt-entry
 
@@ -434,13 +586,18 @@ General keybindings
     "ms" 'org-schedule
     "md" 'org-deadline
 
-    "w" '(:ignore t :which-key "window")
+    "w"  '(:ignore t :which-key "window")
     "wh" 'evil-window-left
     "wl" 'evil-window-right
     "wk" 'evil-window-up
     "wj" 'evil-window-down
 
-    "hd" 'howdoyou-query
+    "q"  'howdoyou-query
+
+    "h"  '(:ignore t :which-key "describe")
+    "hf" 'counsel-describe-function
+    "hv" 'counsel-describe-variable
+    "hk" 'helpful-key
 
     "x"   '(:ignore t :which-key "buffer")
     "xh"  'previous-buffer
@@ -468,7 +625,6 @@ General keybindings
     "cc" 'sl-store-link
     "cp" 'sl-insert-link))
 #+end_src
-
 ** Modeline
 Doom modeline - it looks nice!
 #+begin_src elisp
@@ -544,11 +700,16 @@ Sets up various other emacs modes with evil-mode bindings
 Installing and configuring org-mode:
 1. Use ~org-tempo~ for easier inserting of structure templates
    (e.g. using <s TAB for inserting code blocks)
-2. Add some bindings to ~org-agenda~ for day, week view, clocking in and out, add org agenda files.
-3. Set refile targets to my various GTD files
-4. Set capture templates
-5. Set todo keywords
-6. Indent, fold org files by default
+2. Set refile targets to my various GTD files
+3. Set capture templates
+4. Set todo keywords
+5. Indent, fold org files by default
+
+Dependency of the org-colored-text file
+#+begin_src elisp
+(use-package ov
+  :straight t)
+#+end_src
 
 #+begin_src elisp
 (defun nimor/org-mode-setup ()
@@ -560,59 +721,6 @@ Installing and configuring org-mode:
   :hook
   (org-mode . nimor/org-mode-setup)
   :config
-  ;; make org-agenda respect evil
-  (evil-set-initial-state 'org-agenda-mode 'normal)
-
-  ;; org-agenda custom bindings
-  (evil-define-key 'normal org-agenda-mode-map
-    "vd" 'org-agenda-day-view
-    "vw" 'org-agenda-week-view
-    "I"  'org-agenda-clock-in
-    "O"  'org-agenda-clock-out
-    "vR" 'org-agenda-clockreport-mode)
-
-  ;; files that org-agenda will read from
-  (setq org-agenda-files
-  '("~/Nextcloud/Orgzly/gtd.org"
-    "~/Nextcloud/Orgzly/tickler.org"
-    "~/Nextcloud/Orgzly/inbox.org"
-    "~/Nextcloud/Orgzly/daily.org"
-    "~/Nextcloud/org/work/work.org"
-    "~/Nextcloud/org/reading_list.org"))
-
-  (setq org-agenda-start-with-log-mode t)
-  ;; org-agenda custom views
-  (setq org-agenda-custom-commands
-    '(("g" "GTD" tags-todo "@gtd"
-      ((org-agenda-overriding-header "GTD")))))
-
-  ;; files to refile to
-  (setq org-refile-targets
-    '(("~/Nextcloud/Orgzly/gtd.org"     :maxlevel . 9)
-      ("~/Nextcloud/Orgzly/someday.org" :maxlevel . 9)
-      ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 9)))
-
-  ;; quick templates for org files
-  (setq org-capture-templates
-    '(("t" "Todo [inbox]" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-      "* TODO %i%? \n SCHEDULED: %t")
-      ("T" "Tickler" entry
-      (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
-      "* TODO %i%? \n SCHEDULED: %T")
-      ("M" "Mail Todo with link" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-      "* TODO %i%? \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
-      ("W" "Finnish word of the day" entry
-      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
-      "* TODO Word of the day - %t \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
-      ("d" "Todo [daily]" entry
-        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
-        "* TODO %i%? \n SCHEDULED: %t")
-      ("D" "Todo with link [daily]" entry
-        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
-        "* TODO %a \n SCHEDULED: %t")))
-
   ;; TODO keywords that I use - the ones after the | are the done states
   (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "NEXT(n)" "|" "DONE(d)" "CANCELLED(c)")))
 
@@ -661,22 +769,8 @@ Installing and configuring org-mode:
        (latex (format "\href{%s}{%s}"
                     path (or desc "video"))))))
 
-  ;; clocking
-  ;; Resume clocking task when emacs is restarted
-  (org-clock-persistence-insinuate)
-  ;; Save the running clock and all clock history when exiting Emacs, load it on startup
-  (setq org-clock-persist t)
-  ;; Resume clocking task on clock-in if the clock is open
-  (setq org-clock-in-resume t)
-  ;; Do not prompt to resume an active clock, just resume it
-  (setq org-clock-persist-query-resume nil)
-  ;; If idle for more than 15 minutes, resolve the things by asking what to do
-  ;; with the clock time
-  (setq org-clock-idle-time 15)
-
-  ;; Agenda clock report parameters
-  (setq org-agenda-clockreport-parameter-plist
-    '(:link t :maxlevel 6 :fileskip0 t :compact t :narrow 60 :score 0)))
+  ;; coloured text
+  (load-file (concat user-emacs-directory "/lisp/org-colored-text.el")))
 #+end_src
 
 Like org bullets, but supercharged?
@@ -702,6 +796,98 @@ Disable line numbers in org-mode
 #+begin_src elisp
 (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode 0)))
 #+end_src
+*** Capture templates
+#+begin_src elisp
+(use-package org-capture
+  :after org
+  :config
+  ;; quick templates for org files
+  (setq org-capture-templates
+    '(("t" "Todo [inbox]" entry
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      "* TODO %i%? \n SCHEDULED: %t")
+      ("T" "Tickler" entry
+      (file+headline "~/Nextcloud/Orgzly/tickler.org" "Tickler")
+      "* TODO %i%? \n SCHEDULED: %T")
+      ("M" "Mail Todo with link" entry
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      "* TODO %i%? \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
+      ("W" "Finnish word of the day" entry
+      (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
+      "* TODO Word of the day - %t \n:PROPERTIES: \n:CREATED: %U \n:END: \n %a\n")
+      ("d" "Todo [daily]" entry
+        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
+        "* TODO %i%? \n SCHEDULED: %t")
+      ("D" "Todo with link [daily]" entry
+        (file+olp+datetree "~/Nextcloud/Orgzly/daily.org")
+        "* TODO %a \n SCHEDULED: %t"))))
+#+end_src
+*** Agenda
+#+begin_src elisp
+(use-package org-agenda
+  :after org
+  :config
+  ;; make org-agenda respect evil
+  (evil-set-initial-state 'org-agenda-mode 'normal)
+
+  ;; org-agenda custom bindings
+  (evil-define-key 'normal org-agenda-mode-map
+    "vd" 'org-agenda-day-view
+    "vw" 'org-agenda-week-view
+    "I"  'org-agenda-clock-in
+    "O"  'org-agenda-clock-out
+    "vR" 'org-agenda-clockreport-mode)
+
+  ;; files that org-agenda will read from
+  (setq org-agenda-files
+  '("~/Nextcloud/Orgzly/gtd.org"
+    "~/Nextcloud/Orgzly/tickler.org"
+    "~/Nextcloud/Orgzly/inbox.org"
+    "~/Nextcloud/Orgzly/daily.org"
+    "~/Nextcloud/org/work/work.org"
+    "~/Nextcloud/org/reading_list.org"))
+
+  ;; show logs during the day - closed tasks and times, clocks
+  (setq org-agenda-start-with-log-mode t))
+#+end_src
+*** Refiling
+#+begin_src elisp
+(use-package org-refile
+  :after org
+  :config
+  ;; files to refile to
+  (setq org-refile-targets
+    '(("~/Nextcloud/Orgzly/gtd.org"     :maxlevel . 9)
+      ("~/Nextcloud/Orgzly/someday.org" :maxlevel . 9)
+      ("~/Nextcloud/Orgzly/tickler.org" :maxlevel . 9))))
+#+end_src
+*** Clocking
+#+begin_src elisp
+(use-package org-clock
+  :after org
+  :config
+  ;; Resume clocking task when emacs is restarted
+  (org-clock-persistence-insinuate)
+  ;; Save the running clock and all clock history when exiting Emacs, load it on startup
+  (setq org-clock-persist t)
+  ;; Resume clocking task on clock-in if the clock is open
+  (setq org-clock-in-resume t)
+  ;; Do not prompt to resume an active clock, just resume it
+  (setq org-clock-persist-query-resume nil)
+  ;; If idle for more than 15 minutes, resolve the things by asking what to do
+  ;; with the clock time
+  (setq org-clock-idle-time 15)
+  ;; remove zero time clocks
+  (setq org-clock-out-remove-zero-time-clocks t)
+  ;; Include current clocking task in clock reports
+  (setq org-clock-report-include-clocking-task t)
+  ;; Regular clock report parameters
+  (setq org-clock-clocktable-default-properties
+    '(:block day :maxlevel 9 :scope agenda :link t :compact t :step day :narrow 80 :fileskip0 t :stepskip0 t))
+  ;; Agenda clock report parameters
+  (setq org-agenda-clockreport-parameter-plist
+    '(:link t :maxlevel 6 :fileskip0 t :compact t :narrow 60 :score 0)))
+#+end_src
 *** Org-roam
 The notes (zettelkasten) god
 
@@ -722,7 +908,8 @@ The notes (zettelkasten) god
     "ng" 'org-roam-graph-show
     "ni" 'org-roam-insert
     "nI" 'org-roam-insert-immediate
-    "no" 'org-roam-dailies-capture-today)
+    "no" 'org-roam-dailies-capture-today
+    "nt" 'org-roam-dailies-find-today)
 
   (setq org-roam-completion-everywhere t)
 
@@ -802,28 +989,26 @@ For your journaling needs.
 #+end_src
 *** Org babel
 #+begin_src elisp
-(use-package ob
-  :defer t
-  :after org
-  :config
-  (org-babel-do-load-languages
-    'org-babel-load-languages
-      '((python . t)
-        (shell  . t)
-      )))
+(use-package ob-python   :after org)
+(use-package ob-shell    :after org)
+(use-package ob-js       :after org)
+(use-package ob-java     :after org)
 #+end_src
 
 Google translate
+
 #+begin_src elisp
 (use-package google-translate
   :straight t
   :custom
   (google-translate-backend-method 'curl)
   :config
+  ;; some weird workaround so google translate will actually work
   (defun google-translate--search-tkk () "Search TKK." (list 430675 2721866130)))
 #+end_src
 
 Translate in org src blocks
+
 #+begin_src elisp
 (use-package ob-translate
   :straight t)
