Rename custom function prefix

--- a/init.org
+++ b/init.org
@@ -152,7 +152,7 @@ Courtesy of the great emacs from scratch config: [[https://github.com/daviwil/em
 #+begin_src elisp
 (setq gtd-table-file "~/Nextcloud/org/gtd-notion/gtd.org")
 
-(defun nimor/org-babel-tangle-config ()
+(defun my/org-babel-tangle-config ()
   "Tangles the org config file to init.el"
   (when (string-equal (buffer-file-name)
                       (expand-file-name "~/.emacs.d/init.org"))
@@ -160,7 +160,7 @@ Courtesy of the great emacs from scratch config: [[https://github.com/daviwil/em
     (let ((org-confirm-babel-evaluate nil))
       (org-babel-tangle))))
 
-(defun nimor/gtd-update-dblocks ()
+(defun my/gtd-update-dblocks ()
   "Updates the org-columns dynamic blocks in the gtd file"
   (interactive)
   (when (string-equal (buffer-file-name)
@@ -169,10 +169,10 @@ Courtesy of the great emacs from scratch config: [[https://github.com/daviwil/em
       (org-update-all-dblocks))))
 
 (add-hook 'org-mode-hook
-  (lambda () (add-hook 'after-save-hook #'nimor/org-babel-tangle-config)))
+  (lambda () (add-hook 'after-save-hook #'my/org-babel-tangle-config)))
 
 (add-hook 'org-mode-hook
-  (lambda () (add-hook 'before-save-hook #'nimor/gtd-update-dblocks)))
+  (lambda () (add-hook 'before-save-hook #'my/gtd-update-dblocks)))
 #+end_src
 *** Custom vars file, so it doesn't pollute the init file
 #+begin_src elisp
@@ -339,14 +339,14 @@ Because writing yes is too much work.
 *** Auto Fill and Visual fill
 **** Visual fill, e.g. the visual wrap of the lines
 #+begin_src elisp
-(defun nimor/org-mode-visual-fill ()
+(defun my/org-mode-visual-fill ()
   (setq visual-fill-column-width 120
         visual-fill-column-center-text t)
   (visual-fill-column-mode 1))
 
 (use-package visual-fill-column
   :straight t
-  :hook (org-mode . nimor/org-mode-visual-fill))
+  :hook (org-mode . my/org-mode-visual-fill))
 #+end_src
 
 **** Auto fill, e.g. adding line breaks to lines
@@ -453,14 +453,14 @@ Because writing yes is too much work.
 *** Auto Fill and Visual fill
 **** Visual fill, e.g. the visual wrap of the lines
 #+begin_src elisp
-(defun nimor/org-mode-visual-fill ()
+(defun my/org-mode-visual-fill ()
   (setq visual-fill-column-width 120
         visual-fill-column-center-text t)
   (visual-fill-column-mode 1))
 
 (use-package visual-fill-column
   :straight t
-  :hook (org-mode . nimor/org-mode-visual-fill))
+  :hook (org-mode . my/org-mode-visual-fill))
 #+end_src
 
 **** Auto fill, e.g. adding line breaks to lines
@@ -495,7 +495,7 @@ General keybindings
 (setq work-file "~/Nextcloud/org/work/work.org")
 
 ;; would love to be able to do it like this but it doesn't work for some reason
-(defun nimor/open-file (file-name)
+(defun my/open-file (file-name)
   "Open a specific file"
   (lambda ()
     (interactive)
@@ -507,20 +507,20 @@ General keybindings
   (general-evil-setup t)
 
   ;; general leader key
-  (general-create-definer nimor/leader-keys
+  (general-create-definer my/leader-keys
     :keymaps '(normal insert visual emacs)
     :prefix "SPC"
     :global-prefix "C-SPC")
 
   ;; leader key for language specific bindings
-  (general-create-definer nimor/language-leader-def
+  (general-create-definer my/language-leader-def
     :keymaps '(normal insert visual emacs)
     :prefix "SPC l"
     ;; for insert mode
     :global-prefix "C-SPC l"
     "" '(:ignore t :which-key "language"))
 
-  (nimor/leader-keys
+  (my/leader-keys
     "b"  'counsel-bookmark
     "SPC" 'find-file
     "/"  'swiper
@@ -712,14 +712,14 @@ Dependency of the org-colored-text file
 #+end_src
 
 #+begin_src elisp
-(defun nimor/org-mode-setup ()
+(defun my/org-mode-setup ()
   (org-indent-mode)
   (visual-line-mode 1))
 
 (use-package org
   :straight t
   :hook
-  (org-mode . nimor/org-mode-setup)
+  (org-mode . my/org-mode-setup)
   :config
   ;; TODO keywords that I use - the ones after the | are the done states
   (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "NEXT(n)" "|" "DONE(d)" "CANCELLED(c)")))
@@ -901,7 +901,7 @@ The notes (zettelkasten) god
   (org-roam-directory "~/Nextcloud/org-roam")
   :config
   (setq org-roam-directory "~/Nextcloud/org-roam")
-  (nimor/leader-keys
+  (my/leader-keys
     "n" '(:ignore t :which-key "org-roam")
     "nl" 'org-roam
     "nf" 'org-roam-find-file
@@ -984,7 +984,7 @@ For your journaling needs.
   :config
   (setq org-journal-dir "~/Nextcloud/journal")
   (setq org-journal-date-format "%A, %d %B %Y")
-  (nimor/leader-keys
+  (my/leader-keys
     "nj" 'org-journal-new-entry))
 #+end_src
 *** Org babel
@@ -1380,7 +1380,7 @@ SBT
   (venv-initialize-interactive-shells)
   (venv-initialize-eshell))
 
-(nimor/language-leader-def
+(my/language-leader-def
   "p" '(:ignore t :which-key "python")
   "pf" 'elpy-autopep8-fix-code)
 #+end_src
@@ -1462,7 +1462,7 @@ Helpful adds a lot of very helpful (get it?) information to Emacs’ describe- c
 (use-package link-hint
   :straight t
   :config
-  (nimor/leader-keys
+  (my/leader-keys
     "fo" 'link-hint-open-link))
 #+end_src
 ** Email
@@ -1611,7 +1611,7 @@ Elfeed dashboard similar to mu4e one.
     (lexical-let ((target path))
       (lambda () (interactive) (message "Path: %s" target) (dired target))))
 
-  (nimor/leader-keys
+  (my/leader-keys
    "drm" `(,(dw/dired-link "/run/media/gbojinov") :which-key "Media")
    "fin" `(,(dw/dired-link "~/Nextcloud/org/finnish") :which-key "Finnish")))
 #+end_src
