Add some new packages, prevent myself from screwing me over

--- a/elfeed.org
+++ b/elfeed.org
@@ -10,6 +10,7 @@
 *** [[https://reddit.com/r/orgmode/.rss][r/org-mode]] :orgmode:
 ** Linux
 *** [[https://distrowatch.com/news/dwd.xml][DistroWatch]] :linux:
+*** [[https://xkcd.com/rss.xml][XKCD]] :linux:jokes:
 ** Emacs
 *** [[https://emacsredux.com/atom.xml][Emacs Redux]] :emacs:
 *** [[https://reddit.com/r/emacs/.rss][r/emacs]] :emacs:
