--- a/init.org
+++ b/init.org
@@ -746,6 +746,10 @@ Dependency of the org-colored-text file
   ;; log when an item is rescheduled
   (setq org-log-reschedule (quote time))
 
+  ;; some safeguards against accidentally deleting entire sections of an org file
+  (setq org-catch-invisible-edits 'smart)
+  (setq org-ctrl-k-protect-subtree t)
+
   (setq org-src-fontify-natively t
         org-src-preserve-indentation t ;; do not put two spaces on the left
         org-src-tab-acts-natively t)
@@ -888,6 +892,13 @@ Disable line numbers in org-mode
   ;; Agenda clock report parameters
   (setq org-agenda-clockreport-parameter-plist
     '(:link t :maxlevel 6 :fileskip0 t :compact t :narrow 60 :score 0)))
+#+end_src
+
+With counsel
+
+#+begin_src elisp
+(use-package counsel-org-clock
+  :straight t)
 #+end_src
 *** Org-roam
 The notes (zettelkasten) god
@@ -1150,6 +1161,12 @@ Counsel is a customized set of commands to replace ~find-file~ with ~counsel-fin
   :straight t
   :config
   (counsel-projectile-mode 1))
+#+end_src
+
+Search the web with counsel
+#+begin_src elisp
+(use-package counsel-web
+  :straight t)
 #+end_src
 ** Ivy
 A more minimal completion framework
